# scheme

./: README.md
CShark/: CShark.sln
CShark/src/App/: Program.cs  project.json  project.lock.json
CShark/src/CShark/: CShark.xproj  project.lock.json
CShark/src/CShark/Lexer/: Chars.cs  GenVariable.cs  GenericLexers.cs  ILexer.cs  Numbers.cs  Reader.cs  Scanner.cs  ScannerException.cs  Token.cs  TokenType.cs
CShark/src/CShark/Properties/: AssemblyInfo.cs
CShark/test/CSharkTests/: project.json  project.lock.json
CShark/test/CSharkTests/Lexer/: CharTests.cs  NumberLexerTests.cs  ReaderTests.cs  UtilLexerTests.cs
MuScheme/: .gitignore  MuScheme.sln
MuScheme/src/MuScheme/: MuScheme.xproj
MuScheme/src/MuScheme/Lexer/: GenVariable.cs  GenericLexers.cs  ILexer.cs  Reader.cs  Scanner.cs  ScannerException.cs  Token.cs  TokenType.cs
MuScheme/src/MuScheme/Properties/: AssemblyInfo.cs
MuScheme/test/CSharkTests/: project.json  project.lock.json
MuScheme/test/CSharkTests/Lexer/: UtilLexerTests.cs
expt/: Sch.lhs
ilasm/: hs-ilasm.cabal
ilasm/src/Language/Cil/: Parser.hs  Types.hs
orsch/: .editorconfig  .gitignore  CMakeLists.txt  Scanner.cpp  Stork.cpp  Stork.h
parser/: pscheme-parser.cabal
parser/src/Language/PScheme/: Data.hs  Lexer.x  Parser.hs  Tokens.hs
pf/PostFix/: .gitignore  PostFix.cabal  README.md  stack.yaml
pf/PostFix/app/: Main.hs
pf/PostFix/examples/: 1.pf  10.pf  11.pf  12.pf  13.pf  14.pf  15.pf  16.pf  17.pf  18.pf  19.pf  2.pf  3.pf  4.pf  5.pf  6.pf  7.pf  9.pf  e1.1a.pf  e1.1b.pf  e1.1c.pf  e1.1d.pf  e1.2a.pf  e1.2b.pf
pf/PostFix/src/Language/: PostFix.hs
pf/PostFix/src/Language/PostFix/: DT.hs  Parser.hs
pf/PostFix/test/: Spec.hs
